# Imitatoes

./: README.md  __init__.py  imitatoes_workflow.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  pylint.yml
custom_nodes/: __init__.py
custom_nodes/imitatoes/: __init__.py  imitatoes_loop.py
scripts/: install.sh  run_loop.py  test.sh
tests/: test_run_loop.py  test_smoke.py
workflows/: imitatoes_self_improving.json
